--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
 html{
     background-color: lightblue;
+    text-align: center;
+    position: relative;
+    min-height: 100%;
 }
 
 .game-board{
-    
+    /* width: 50%; */
+    border-collapse: collapse;
+    table-layout: fixed;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+
+td{
+    min-width: 100px;
+    min-height: 100px;
+    border: 3px solid black;
 }
