--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ td{
     min-height: 100px;
     border: 3px solid black;
 }
+
+#players{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
