--- a/style.css
+++ b/style.css
@@ -7,29 +7,62 @@
 html{
     background-color: lightblue;
     text-align: center;
-    position: relative;
-    min-height: 100%;
+    height: 100%;
+    border: 3px solid yellow;
+}
+
+body{
+    height: 100%;
+    border: 3px solid pink;
+    font-size: 20px;
+}
+
+.game{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin: 50px;
 }
 
 .game-board{
-    /* width: 50%; */
     border-collapse: collapse;
     table-layout: fixed;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    display: grid;
+    gap: 20px;
+    justify-content: center;
+}
+
+caption{
+    font-size: 2rem;
+    font-weight: 900;
+    color: grey;
 }
 
 td{
-    min-width: 100px;
+    width: 100px;
     height: 100px;
     border: 3px solid black;
     font-size: 2rem;
+    color: red;
+    font-weight: 900;
+    background-color: white;
 }
 
 #players{
     display: flex;
     justify-content: center;
     gap: 20px;
+}
+
+.player-x, .player-o{
+    padding: 10px;
+    border-radius: 2rem;
+    width: 100px;
+    font-size: 2rem;
+    color: red;
+    font-weight: 900;
+}
+
+.player-x:hover, .player-o:hover{
+    transform: scale(1.1);
 }
