--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     justify-content: center;
 }
 
-caption{
+caption, .winner{
     font-size: 2rem;
     font-weight: 900;
     color: grey;
@@ -54,10 +54,9 @@ td{
     gap: 20px;
 }
 
-.player-x, .player-o{
-    padding: 10px;
+.player-x, .player-o, .play-again{
+    padding: 10px 40px;
     border-radius: 2rem;
-    width: 100px;
     font-size: 2rem;
     color: red;
     font-weight: 900;
@@ -65,4 +64,8 @@ td{
 
 .player-x:hover, .player-o:hover{
     transform: scale(1.1);
+}
+
+.hidden{
+    visibility: hidden;
 }
